@@ -33,6 +33,19 @@ AX_CHECK_GL
 AX_CHECK_GLU
 AX_CHECK_GLUT
 
+# check if we found them
+if test "$no_gl" = yes -o "$no_glu" = yes -o "$no_glut" = yes ;
+then
+   AC_MSG_ERROR([
+================================================================================
+WARNING: GL/GLU/GLUT not found.
+
+The GL, GLU, and GLUT libraries are required. (also check libXi and libXmu)
+================================================================================
+   ])
+fi
+
+
 AC_SUBST(GL_LIBS)
 AC_SUBST(GL_CFLAGS)
 AC_SUBST(GLU_LIBS)
