@@ -1,11 +1,10 @@
-%product Register
+%product register
 %copyright 1993-2002 David MacDonald
 %vendor McConnell Brain Imaging Centre
-%packager Andrew Janke <rotor@cmr.uq.edu.au>
+%packager Andrew Janke <a.janke@gmail.com>
 %license COPYING
 %readme README
 %description MINC register thing
 %version @VERSION@
-%requires netcdf
 %requires minc
 %requires bicpl
